--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="insertion sort.js"></script>
     <script defer src="buble sort.js"></script>
+    <script defer src="selection sort.js"></script>
 </head>
 <body>
-    <div class="title">
+    <div class="title">                                                                                      
         <h1>contact me</h1>
     </div>
+    
     
 </body>
 </html>
