--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="insertion sort.js"></script>
     <script defer src="buble sort.js"></script>
     <script defer src="selection sort.js"></script>
+    <script defer src="merge sort.js"></script>
 </head>
 <body>
     <div class="title">                                                                                      
